update tile style to fix minor UI bug on ios render

--- a/exercise.tile.hat/css/styles.css
+++ b/exercise.tile.hat/css/styles.css
@@ -8,6 +8,7 @@ html {
 }
 
 body {
+  margin: 0;
   padding: 20px;
   padding-top: 60px;
   background-color: white;
